# symmetrix

./: .pre-commit-config.yaml  README.md
.github/workflows/: ci.yaml
libsymmetrix/: CMakeLists.txt
libsymmetrix/source/: cubic_spline.cpp  cubic_spline.hpp  cubic_spline_kokkos.cpp  cubic_spline_kokkos.hpp  cubic_spline_set.cpp  cubic_spline_set.hpp  cubic_spline_set_kokkos.cpp  cubic_spline_set_kokkos.hpp  mace.cpp  mace.hpp  mace_kokkos.cpp  mace_kokkos.hpp  multilayer_perceptron.cpp  multilayer_perceptron.hpp  multilayer_perceptron_kokkos.cpp  multilayer_perceptron_kokkos.hpp  multivariate_polynomial.cpp  multivariate_polynomial.hpp  multivariate_polynomial_kokkos.cpp  multivariate_polynomial_kokkos.hpp  radial_function_set_kokkos.cpp  radial_function_set_kokkos.hpp  spherical_harmonic.cpp  spherical_harmonic.hpp  tools.cpp  tools_kokkos.cpp  tools_kokkos.hpp  zbl.cpp  zbl.hpp  zbl_kokkos.cpp  zbl_kokkos.hpp
pair_symmetrix/: pair_symmetrix_mace.cpp  pair_symmetrix_mace.h  pair_symmetrix_mace_kokkos.cpp  pair_symmetrix_mace_kokkos.h
pair_symmetrix/test/: conftest.py  test_pair_symmetrix_mace.py
symmetrix/: CMakeLists.txt  README.md  pyproject.toml
symmetrix/src/cpp/: cubic_spline.cpp  cubic_spline_kokkos.cpp  cubic_spline_set.cpp  cubic_spline_set_kokkos.cpp  mace.cpp  mace_kokkos.cpp  multilayer_perceptron.cpp  multilayer_perceptron_kokkos.cpp  multivariate_polynomial.cpp  multivariate_polynomial_kokkos.cpp  spherical_harmonic.cpp  symmetrix.cpp  tools.cpp  tools_kokkos.cpp  utilities_kokkos.hpp  zbl.cpp  zbl_kokkos.cpp
symmetrix/src/symmetrix/: __init__.py  calculator.py
symmetrix/src/symmetrix/mace/: __init__.py  cli.py  extractor.py
symmetrix/test/: test_cubic_spline.py  test_cubic_spline_kokkos.py  test_cubic_spline_set.py  test_cubic_spline_set_kokkos.py  test_lammpslib.py  test_mace.py  test_multilayer_perceptron.py  test_multilayer_perceptron_kokkos.py  test_multivariate_polynomial.py  test_symmetrix_calc.py  test_tools.py  test_zbl.py  test_zbl_kokkos.py
