[build-system]
requires = ["scikit-build-core", "pybind11", "cmake>=3.27"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.27"
build-dir = "build"
wheel.exclude = ["lib/", "include/"]
wheel.packages = ["src/symmetrix"]

[project]
name = "symmetrix"
version = "0.0.1"
description = "Symmetrix — a package for functions equivariant under: translation, rotation, inversion, and exchange of particles."
dependencies = [
    "numpy",
    "scipy",
    "ase",
]

[project.optional-dependencies]
mace = [
    "torch",
    "mace-torch",
]
test = [
    "pytest",
]

[project.scripts]
symmetrix_extract_mace = "symmetrix.mace.cli:main"

[tool.ruff]
lint.ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402"]
"test_*.py" = ["F811"]
